@@ -24,6 +24,7 @@
   * Add fennel support
   * Add support for [[https://github.com/nextflow-io/language-server][Nextflow]]
   * Add TypeSpec support
+  * Add Tree-sitter query support
 
 ** 9.0.0
   * Add language server config for QML (Qt Modeling Language) using qmlls.
